tests/ui/const-generics/mgca/unused_speculative_def_id.stderr
error[E0425]: cannot find value `ERR` in this scope
  --> $DIR/unused_speculative_def_id.rs:20:16
   |
LL |     field: A<{ ERR::<const { 1 }> }>,
   |                ^^^
   |
  --> $SRC_DIR/core/src/result.rs:LL:COL
   |
   = note: similarly named tuple variant `Err` defined here
help: a tuple variant with a similar name exists
   |
LL -     field: A<{ ERR::<const { 1 }> }>,
LL +     field: A<{ Err::<const { 1 }> }>,
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
